add bootstrap and stying

--- a/verde/src/index.css
+++ b/verde/src/index.css
@@ -5,9 +5,20 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: darkseagreen;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.container{
+  margin-left: 35%;
+  margin-top: 80px;
+
+}
+
+.spancer{
+  width: 150px;
 }
